methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: not found: value vuBiscuit
      vuBiscuit = true
      ^MethodsReturning:6: error: not found: value vuBiscuit
      vuBiscuit = false
      ^MethodsReturning:9: error: not found: value vuBiscuit
  return vuBiscuit
         ^