methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (nbPas <- 1 to 6) {
    if (estSurBiscuit())
      vuBiscuit = true
    else
      vuBiscuit = false
  }
  recule(6)
  return vuBiscuit
}
